# starviewer

./: .gitattributes  .gitignore  .travis.yml  COMPILE.mkd  Dockerfile  Doxyfile  README.md  appveyor.yml  qt.rb  qt5.rb
starviewer/: .gitignore  CMakeLists.txt  COPYRIGHT  CTest.cmake  Doxyfile  HEADER  LICENSE  LICENSE-CE  NOTICE  addlibrarydependency.pri  changelog.txt  dart.sh  kws.xml  kwsFiles.txt  makelinuxpackage.sh  sourcelibsdependencies.pri  starviewer.kdevelop  starviewer.pro
starviewer/CMake/: ApplicationsTargetNames.cmake  BuildSettings.cmake  CacheVariables.cmake  DefaultSdkDirectories.cmake  GetTargetIncludes.cmake  InstallExtensions.cmake  InstallTargets.cmake  Installers.cmake  LinkQt.cmake  Options.cmake  PdfManuals.cmake  ReleaseNotes.cmake  Theme.cmake  Translations.cmake
starviewer/customwindowlevels/: customwindowlevels.xml
starviewer/dicomdumpdefaulttags/: ct.xml  ctHelix.xml  ctLocalizer.xml  mg.xml  mr.xml
starviewer/doc/: DefinicioDataElementType.txt  Model ER.odg  ProtocolsRMPhilips.txt  dissenyBaseDades.xmi  dissenyPacient.xmi  dissenyTools.xmi  patientFiller.xmi  tools.xmi
starviewer/doc/help/: How to access IFU.fodt  make_pdfs.js
starviewer/doc/templates/: Starviewer-Horitzontal.dotx  Starviewer-Vertical.dotx  icones_vectorial.docx
starviewer/hangingprotocols/: Readme.txt
starviewer/hangingprotocols/Default/: ExploreCT.xml  GeneralCT.xml  GeneralCT_3.xml  GeneralMR.xml  GeneralMR_4.xml  Lumbar.xml  PreviGeneralCT.xml  SerieSagittal.xml  Telemando.xml  Telemando_2.xml  Telemando_6.xml
starviewer/hangingprotocols/Demos/: abdomen.xml  cor.xml  dynamic.xml  edema.xml
starviewer/hangingprotocols/Güell/: MamographyGuell.xml  MamographyGuell2.xml  MamographyGuellCC.xml  MamographyGuellMLO.xml  MamographyGuellMLO2.xml  PriorMamographyGuellCC.xml  PriorMamographyGuellMLO.xml  PriorMamographyGuellMLO2.xml
starviewer/hangingprotocols/Mammography/: MammographyCC.xml  MammographyPrevious.xml  PriorMammographyCC.xml
starviewer/hangingprotocols/Mamography/: MamoPreviousCCL.xml  MamoPreviousCCR.xml  MamoPreviousMLOL.xml  MamoPreviousMLOR.xml  Mamography.xml  MamographyCC.xml  MamographyCCPrevia.xml  MamographyMLO.xml  MamographyMLOPrevia.xml  MamographyPrevious.xml  MamographyTrueta.xml  MamographyTruetaCC.xml  MamographyTruetaMLO.xml  PriorMamographyCC.xml  PriorMamographyMLO.xml
starviewer/hangingprotocols/Testing/: cor.xml  dynamic.xml
starviewer/installerresources/: CPackProjectConfigFile.cmake  DebRpmCPackInstallScript.cmake  Starviewer.desktop.in  StarviewerUrlHandler.desktop.in  wixpatch.xml  wixshortcuts.xml
starviewer/releasenotes/: changelog.css  changelog.html  changelog.xml  changelog.xsl  recentchangelog.xsl
starviewer/src/: CMakeLists.txt  applicationstargetnames.inc  applicationstargetnames.pri  breakpad.inc  breakpad.pri  compilationtype.inc  compilationtype.pri  corelibsconfiguration.inc  corelibsconfiguration.pri  cuda.inc  cuda.pri  dcmtk.inc  dcmtk.pri  defaultdirectories.inc  defaultdirectories.pri  detectlinux64.inc  extensions.inc  extensions.pri  gdcm.inc  gdcm.pri  glew.inc  itk.inc  itk.pri  log4cxx.inc  log4cxx.pri  makefixdebug.js  makefixdebug.pri  src.pro  threadweaver.inc  threadweaver.pri  translations.inc  translations.pri  vtk.inc  vtk.pri
starviewer/src/colour/: colour.pro
starviewer/src/core/: CMakeLists.txt  abortrendercommand.cpp  abortrendercommand.h  abstractroidataprinter.cpp  abstractroidataprinter.h  accumulator.cpp  accumulator.h  ambientvoxelshader.cpp  ambientvoxelshader.h  anatomicalplane.cpp  anatomicalplane.h  anatomicalplanesynccriterion.cpp  anatomicalplanesynccriterion.h  anatomicalregionsynccriterion.cpp  anatomicalregionsynccriterion.h  anglebetweenplanessynccriterion.cpp  anglebetweenplanessynccriterion.h  angletool.cpp  angletool.h  angletoolrepresentation.cpp  angletoolrepresentation.h  annotationflags.h  anyinputsynccriterion.cpp  anyinputsynccriterion.h  applicationstylehelper.cpp  applicationstylehelper.h  applicationupdatechecker.cpp  applicationupdatechecker.h  applicationversionchecker.cpp  applicationversionchecker.h  applicationversioncheckeronserver.cpp  applicationversioncheckeronserver.h  applicationversiontest.cpp  applicationversiontest.h  applyhangingprotocolqviewercommand.cpp  applyhangingprotocolqviewercommand.h  areameasurecomputer.cpp  areameasurecomputer.h  arrowtool.cpp  arrowtool.h  (+1168 more)
starviewer/src/crashreporter/: CMakeLists.txt  crashreporter.cpp  crashreporter.pro  crashreporter.qrc  crashreporter_ca_ES.ts  crashreporter_en_GB.ts  crashreporter_es_ES.ts  crashreportersender.h  crashreportersender_linux.cpp  crashreportersender_mac.mm  crashreportersender_windows.cpp  qcrashreporter.cpp  qcrashreporter.h  qcrashreporterbase.ui
starviewer/src/extensions/: CMakeLists.txt  basicconfextensions.inc  basicconfextensions.pri  extensions.pro
starviewer/src/filters/: filters.pro
starviewer/src/inputoutput/: CMakeLists.txt  cacheimagedal.cpp  cacheimagedal.h  cacheinstallation.cpp  cacheinstallation.h  cachelayer.cpp  cachelayer.h  cachepacs.cpp  cachepacs.h  cachepool.cpp  cachepool.h  cacheseriesdal.cpp  cacheseriesdal.h  cachestudydal.cpp  cachestudydal.h  cachetest.cpp  cachetest.h  cachetools.cpp  cachetools.h  const.h  constkey.h  convertdicomtolittleendian.cpp  convertdicomtolittleendian.h  converttodicomdir.cpp  converttodicomdir.h  createdicomdir.cpp  createdicomdir.h  createinformationmodelobject.cpp  createinformationmodelobject.h  database.sql  databaseconnection.cpp  databaseconnection.h  databaseinstallation.cpp  databaseinstallation.h  dicomanonymizer.cpp  dicomanonymizer.h  dicomdirburningapplication.cpp  dicomdirburningapplication.h  dicomdirburningapplicationtest.cpp  dicomdirburningapplicationtest.h  (+361 more)
starviewer/src/interface/: CMakeLists.txt  QVTKWidget.cxx  QVTKWidget.h  appimportfile.cpp  appimportfile.h  applicationcommandlineoptions.cpp  applicationcommandlineoptions.h  director.cpp  director.h  distancetool.cpp  distancetool.h  extensioncreator.cpp  extensioncreator.h  (+149 more)
starviewer/templates/: cpp  h
starviewer/tests/: tests.pro
(+1545 files in other folders)
